# backend_androidproject

./: .gitignore  .gitmodules  CMakeLists.txt  README.MD  imgui.ini  setup.sh
examples/: client  client.c  client.py  database.cpp  database.h  gui_app.cpp  gui_app.h  main.cpp  map_engine.cpp  map_engine.h  messages.txt  server.py  telemetry.cpp  telemetry.h
